<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main"
    android:id="@+id/layout_pebble">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pebble_install"
        android:id="@+id/installapp_button"
        android:onClick="installIDOC360" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pebble_sendpulse"
        android:id="@+id/sendtestmessage_button"
        android:onClick="sendTestSignal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pebbledebug_textview"
        android:text="@string/defaultpebbleconnected"
        android:textColor="@color/text"
        android:onClick="sendTestSignal"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/installapp_button"
        android:layout_alignLeft="@+id/installapp_button"
        android:layout_alignStart="@+id/installapp_button" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openCloseToggle"
        android:checked="false"
        android:textOff="@string/open"
        android:textOn="@string/close"
        android:onClick="toggleApp"
        android:layout_above="@+id/debugLog"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:id="@+id/settingsTitle"
        android:layout_marginBottom="164dp"
        android:textColor="@color/text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debuglog"
        android:id="@+id/debugLog"
        android:layout_marginTop="80dp"
        android:textColor="@color/text"
        android:layout_below="@+id/installapp_button"
        android:layout_alignLeft="@+id/installapp_button"
        android:layout_alignStart="@+id/installapp_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coming soon..."
        android:id="@+id/textView"
        android:layout_alignTop="@+id/settingsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textColor="@color/text" />

</RelativeLayout>
