<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pebble_title"
        android:id="@+id/pebblemanager_tv"
        android:textColor="@color/text"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/sendtestmessage_button"
        android:layout_alignEnd="@+id/sendtestmessage_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pebble_install"
        android:id="@+id/installapp_button"
        android:layout_below="@+id/pebblemanager_tv"
        android:layout_centerHorizontal="true"
        android:onClick="installIDOC360" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pebble_sendpulse"
        android:id="@+id/sendtestmessage_button"
        android:layout_below="@+id/installapp_button"
        android:layout_centerHorizontal="true"
        android:onClick="sendTestSignal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devicemangertitle"
        android:id="@+id/devicemanager_title"
        android:textColor="@color/text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultpebbleconnected"
        android:id="@+id/pebbledebug_textview"
        android:textColor="@color/text"
        android:layout_below="@+id/sendtestmessage_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="sendTestSignal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idocconnected"
        android:id="@+id/idocdebug_textview"
        android:textColor="@color/text"
        android:layout_below="@+id/devicemanager_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

</RelativeLayout>
