<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:text="@string/credit"
        android:textColor="@color/text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/nrfcredittitle"
        android:textColor="@color/text"
        android:textSize="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="255dp"
        android:text="@string/nrfcreditcontent"
        android:textColor="@color/text"
        android:layout_weight="0.35"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blkscredit"
        android:id="@+id/textView2"
        android:textColor="@color/text"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nRF UART"
        android:id="@+id/uartButton"
        android:layout_alignTop="@+id/blksButton"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:onClick="openUART" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blksButton"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="BLKS"
        android:onClick="openBlks" />

</RelativeLayout>